src/test/ui/traits/traits-multidispatch-convert-ambig-dest.stderr
error[E0283]: type annotations needed
  --> $DIR/traits-multidispatch-convert-ambig-dest.rs:26:5
   |
LL | fn test<T,U>(_: T, _: U)
   |    ---- required by a bound in this
LL | where T : Convert<U>
   |           ---------- required by this bound in `test`
...
LL |     test(22, std::default::Default::default());
   |     ^^^^ cannot infer type for type `i32`
   |
   = note: cannot satisfy `i32: Convert<_>`
help: consider specifying the type arguments in the function call
   |
LL |     test::<i32>(22, std::default::Default::default());
   |         ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
